--- a/style.css
+++ b/style.css
@@ -20,6 +20,176 @@ body {
   background: #2b3f48; 
 }
 
+#map {     
+  position: absolute;
+  height: 100vh;
+  width: 60%;
+  right: 0;
+  /* top: 0; */
+  z-index: 0;
+  bottom: 0;
+  border: none;
+  /* border-left: 3px solid white; */
+  box-shadow: black 0px 0px 100px 15px; }
+
+  .flex-container {
+    display: flex;
+    margin-top: 2vh;
+    right: 50vh;
+  }
+  
+  #box1 {
+    position: absolute;
+    font-family: 'Montserrat';
+    color: white;
+    font-size: .8em;
+    background-color: #2b3f48;
+    border: none;
+    width:12%;
+    height: 19%;
+    text-align: center;
+    z-index: 999;
+    box-shadow:  0px 0px 100px 5px black;
+    margin-left: 1%;
+    border: 0px solid white;
+  }
+  
+  #box1:hover {
+    background-color: #ff9300;
+    transition: ease-in-out .4s;
+    transform: scale(1.01);
+  }
+  
+  #box2 {
+    position: absolute;
+    font-family: 'Montserrat';
+    color: white;
+    font-size: .8em;
+    background-color: #2b3f48;
+    border: none;
+    width:12%;
+    height: 19%;
+    text-align: center;
+    z-index: 999;
+    box-shadow:  0px 0px 100px 5px black;
+    margin-left: 2.5%;
+    border: 0px solid white;
+    left: 11.5%;
+  }
+  
+  #box2:hover {
+    background-color: #ff9300;
+    transition: ease-in-out .4s;
+    transform: scale(1.01);
+  }
+  
+  #box3 {
+    position: absolute;
+    font-family: 'Montserrat';
+    color: white;
+    font-size: .8em;
+    background-color: #2b3f48;
+    border: none;
+    width:12%;
+    height: 19%;
+    text-align: center;
+    margin-left: 1%;
+    z-index: 999;
+    box-shadow:  0px 0px 100px 5px black;
+    left: 26%;
+    border: 0px solid white;
+  }
+  
+  #box3:hover {
+    background-color: #ff9300;
+    transition: ease-in-out .4s;
+    transform: scale(1.01);
+  }
+  
+  #box4 {
+    position: absolute;
+    font-family: 'Montserrat';
+    color: white;
+    font-size: .8em;
+    background-color: #2b3f48;
+    border: none;
+    width: 38%;
+    height: 20vh;
+    text-align: center;
+    z-index: 999;
+    box-shadow:  0px 0px 100px 5px black;
+    margin-left: 1%;
+    border: 0px solid white;
+  }
+  
+  #box4:hover {
+    transition: ease-in-out .4s;
+    transform: scale(1.01);
+    background-color: #4169E1;
+  }
+  
+  #knop {
+    font-family: 'Montserrat';
+    color: white;
+    font-size: 1em;
+    background-color: #4169E1;
+    width: 33vw;
+    margin: .2vh;
+    margin-left: 7.5%;
+    border: none;
+    height: 5vh;
+    z-index: 999;
+  }
+  
+  #knop:hover {
+    transition: .2s;
+    background-color: #4169E1;
+    transform: scale(1.01);
+    box-shadow:  0px 0px 100px 5px black;
+  }
+  
+  #knop2 {
+    font-family: 'Montserrat';
+    color: white;
+    font-size: 1em;
+    background-color: #2b3f48;
+    width: 33vw;
+    margin: 1vh;
+    margin-left: 7.5%;
+    border: none;
+    height: 5vh;
+    z-index: 998;
+  }
+  
+  .container2{
+    height: 20vh;
+    background-color: #2b3f48;
+    left: 0;
+    width: 40%;
+    z-index: 0;
+    margin-top: 1vh;
+  }
+  
+  .container2 img{
+    left: 0;
+    width: 5vh;
+    z-index: 0;
+    margin-top: 2vh;
+  }
+  
+  .container2 a {
+    color: white;
+    font-size: 2vh;
+  }
+  
+  .container2 p {
+    margin-top: 1.5vh;
+    color: white;
+    font-family: 'Raleway', sans-serif;
+    font-size: 9vh;
+  }
+
+  
 #loader2 {
   position: absolute;
   left: 50%;
@@ -54,86 +224,93 @@ body {
   animation-duration: 1s
 }
 
-@-webkit-keyframes animatebottom {
-  from { bottom:-100px; opacity:0 } 
-  to { bottom:0px; opacity:1 }
-}
-
-@keyframes animatebottom { 
-  from{ bottom:-100px; opacity:0 } 
-  to{ bottom:0; opacity:1 }
-}
-
-#myDiv {
-  display: none;
-  text-align: center;
-}
-
-.btnStack {
-  font-family: 'Montserrat';
-  background-color: #24a4ff;
-  width: 10%;
-  color: white;
-  text-decoration: none;
-  display: inline-block;
-  padding: 12px 10px;
-  margin-bottom: 0;
-  font-size: 15px;
-  height: 30px;
-  text-align: center;
-  vertical-align: middle;
-  cursor: pointer;
-  border-radius: 30px;
-  margin-top: 30px;
-  box-shadow: black 0px 0px 100px 15px;
-}
-
-a.btnStack:hover {
-  background: grey;
-  transition: .3s;
-}
-
-#kaart {
+  #box1 {
     position: absolute;
-    height: 100vh;
-    width: 100%;
-    /* top: 0; */
-    z-index: 0;
-
-    border: none;
-    /* border-left: 3px solid white; */
-    box-shadow: black 0px 0px 100px 15px;
-    }
-
-  .circle {
-    background: #0000ff;
-    border-radius: 50%;
-    box-shadow: 4px 4px 3px darkgrey;
-    -moz-box-shadow: 4px 4px 3px grey;
-    -webkit-box-shadow: 4px 4px 3px grey;
-  }
-
-  h1{
-    font-size: 12px;
-    text-align: center;
-    font-family: 'Montserrat Light', sans-serif;
-    font-weight: 600; 
-    color: black;
-  }
-
-  #demo {
+    font-family: 'Montserrat';
     color: white;
-    font-family: 'Montserrat Light';
-    font-size: 12px;
-  }
-
-  #data{
+    font-size: .8em;
+    background-color: #2b3f48;
+    border: none;
+    width:12%;
+    height: 19%;
     text-align: center;
-    font-size: 14px;
-    position: relative;
-    transform: translateY(-60%);
-    top: 50%;
-    font-family: 'Montserrat', sans-serif;
+    z-index: 999;
+    box-shadow:  0px 0px 100px 5px black;
+    margin-left: 1%;
+    border: 0px solid white;
+  }
+  
+  #box1:hover {
+    background-color: #4169E1;
+    transition: ease-in-out .4s;
+    transform: scale(1.01);
+  }
+  
+  #box2 {
+    position: absolute;
+    font-family: 'Montserrat';
+    color: white;
+    font-size: .8em;
+    background-color: #2b3f48;
+    border: none;
+    width:12%;
+    height: 19%;
+    text-align: center;
+    z-index: 999;
+    box-shadow:  0px 0px 100px 5px black;
+    margin-left: 2.5%;
+    border: 0px solid white;
+    left: 11.5%;
+  }
+  
+  #box2:hover {
+    background-color: #4169E1;
+    transition: ease-in-out .4s;
+    transform: scale(1.01);
+    /* box-shadow:  0px 0px 10px 1px #ff9300; */
+  }
+  
+  #box3 {
+    position: absolute;
+    font-family: 'Montserrat';
+    color: white;
+    font-size: .8em;
+    background-color: #2b3f48;
+    border: none;
+    width:12%;
+    height: 19%;
+    text-align: center;
+    margin-left: 1%;
+    z-index: 999;
+    box-shadow:  0px 0px 100px 5px black;
+    left: 26%;
+    border: 0px solid white;
+  }
+  
+  #box3:hover {
+    background-color: #4169E1;
+    transition: ease-in-out .4s;
+    transform: scale(1.01);
+  }
+  
+  #box4 {
+    position: absolute;
+    font-family: 'Montserrat';
+    color: white;
+    font-size: .8em;
+    background-color: #2b3f48;
+    border: none;
+    width: 38%;
+    height: 20vh;
+    text-align: center;
+    z-index: 999;
+    box-shadow:  0px 0px 100px 5px black;
+    margin-left: 1%;
+    border: 0px solid white;
+  }
+  
+  #box4:hover {
+    transition: ease-in-out .4s;
   }
 
   .no-js #loader { display: none;  }
@@ -147,66 +324,3 @@ a.btnStack:hover {
 	z-index: 9999;
 	background:  center no-repeat #2b3f48;
 }
-
-.popup {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* The actual popup */
-.popup .popuptext {
-  visibility: hidden;
-  top: 20%;
-  width: 90vh;
-  height: 26vh;
-  font-family: 'Montserrat';
-  font-size: 1.7vh;
-  /* background-color: #555; */
-  background-color: #2b3f48;
-  color: #fff;
-  text-align: left;
-  border-radius: 6px;
-  padding: 30px ;
-  position: absolute;
-  z-index: 9999;
-  bottom: 100%;
-  /* left: 25%; */
-  margin-left: 11vh;
-  box-shadow: black 0px 0px 100px 8px;
-}
-
-/* Popup arrow */
-.popup .popuptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #555 transparent transparent transparent;
-}
-
-/* Toggle this class - hide and show the popup */
-.popup .show {
-  visibility: visible;
-  -webkit-animation: fadeIn 1s;
-  animation: fadeIn 1s;
-}
-
-/* Add animation (fade in the popup) */
-@-webkit-keyframes fadeIn {
-  from {opacity: 0;} 
-  to {opacity: 1;}
-}
-
-@keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity:1 ;}
-}
-
